# QuantaEnergi

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  .slugignore  BETA_LAUNCH_CHECKLIST.md  COMPLETION_EXECUTION_SUMMARY.md  COMPREHENSIVE_VALIDATION_REPORT.md  DEPENDENCY_STATUS_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.backend  FINAL_COMPLETION_REPORT.md  FINAL_COMPLETION_STATUS.md  FINAL_E2E_VALIDATION_REPORT.md  FINAL_ENTERPRISE_COMPLETION_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  FREE_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_DEPLOYMENT_STATUS.md  LOCAL_STARTUP_GUIDE.md  MERMAID_11_4_1_SYNTAX_FIXES.md  ONE_DAY_COMPLETION_SUMMARY.md  Openrouterkey.env  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETE_IMPLEMENTATION_SUMMARY.md  PR1-PR4_COMPLETION_REPORT.md  PR2_COMPLETION_REPORT.md  PR5-DEPLOYMENT-SUMMARY.md  (+96 more)
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.cursor/rules/: approach.mdc  cursor.mdc  project.mdc
.github/workflows/: ci.yml  deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 4342a0c0b256_initial_models.py
alembic_backup/: env.py  script.py.mako
app/: main.py
app/core/: security.py
app/db/: database.py  models.py  schemas.py
app/endpoints/: auth.py
app/graphql/: schemas.py
app/services/: ai_services.py
backend/: .coverage  Dockerfile  Dockerfile.prod  FINAL_PHASE2_STATUS.md  PHASE2_IMPLEMENTATION_SUMMARY.md  POST_PHASE3_STATUS_REPORT.md  PR2_FRONTEND_SECURITY_STATUS_REPORT.md  PR3_GTM_COMPLIANCE_STATUS_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE.md  QUANTAENERGI_PRODUCTION_STATUS.md  README.md  bandit_report.json  config.env  create_users.py  energy_service.py  env.production.template  fix_warnings.py  main.py  main.py.bak  main_simple.py  minimal_test.py  render.yaml  requirements.txt  run_comprehensive_tests.py  run_grpc_test.py  simple_main.py  test_all_production_services.py  test_api_endpoints.py  test_enhanced_features.py  test_phase1_etrm_features.py  test_phase1_stubs.py  test_phase2_advanced_features.py  test_phase2_complete_features.py  test_phase2_stubs.py  test_phase3_stubs.py  test_pr2_frontend_security.py  test_production_ready.py  test_redis.py  test_server.py  (+3 more)
backend/app/: __init__.py  api_endpoints.py  main.py  main_clean.py  main_refactored.py  main_simple.py
backend/models/: crude_oil_ensemble.pkl  crude_oil_ensemble_scaler.pkl  schema.py
backend/proto/: energy.proto  energy_pb2.py  energy_pb2_grpc.py
backend/tests/: test_all_new_services.py  test_analytics.py  test_api.py  test_comprehensive_e2e.py  test_database_integration.py  test_disruptive_features.py  test_e2e_comprehensive.py  test_forecasting.py  test_grpc.py  test_jwt_authentication.py  test_physical_delivery.py  test_quantum.py  test_quantum_concurrency.py  test_refactored_structure.py  test_refresh.py  test_security.py  test_technical_patterns.py  test_trade.py  test_websocket.py  test_websocket_integration.py
clients/: enverus.py  nordpool.py  pjm.py
docs/: 7_DAY_ACTION_PLAN.md  API_Reference.md  CODEBASE_DUPLICATION_AUDIT_REPORT.md  ETRM_CTRM_Features.md  FINAL_DUPLICATION_ELIMINATION_REPORT.md  Flaws_Remediation_Plan.md  IMMEDIATE_DUPLICATION_FIX_ACTION_PLAN.md  Industry_Flaws_Analysis.md  Islamic_Finance_Features_Summary.md  Launch_Checklist.md  Middle_East_Support_Summary.md  PR1_MultiTenancy_Implementation.md  PR2_Arabic_i18n_Implementation.md  PR4_US_Power_Gas_Integration.md  PRD.md  Phase_4_Completion_Status.md  QUALITY_METRICS_DASHBOARD.md  QUICK_START_GUIDE.md  README.md  TEAM_TRAINING_GUIDE.md  US_MARKET_INTEGRATION_PLAN.md  api.md  architecture-diagrams.md  beta_launch_plan.md  business-diagrams.md  compliance-checks.md  compliance_certifications.md  deployment-architecture.md  deployment.md  devops-diagrams.md  diagram-index.md  feature_matrix.md  quantaenergi-system-architecture.md  quantum_vs_hsms.md  redis-setup.md  sales_pitch_deck.md  simplified-architecture.md  user_guide.md  windows-redis-setup.md
docs/architecture/: README.md  REFACTORING_PATTERNS.md  SERVICE_TEMPLATE.md  deployment-diagrams.md  feature-diagrams.md  function-diagrams.md  sequence-diagrams.md  structural-diagrams.md  (+1 more)
env/: pyvenv.cfg
frontend/: .gitignore  App.js  Dockerfile  Dockerfile.prod  README.md  cypress.config.js  env.production  index.html  jest.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
infrastructure/: __init__.py
k8s/: deployment.yaml  disaster-recovery.yaml  monitoring.yaml  redis-cluster.yaml
kubernetes/: database.yaml  deployment.yaml  monitoring.yaml
mobile/: Dockerfile.web  package.json  pubspec.yaml
models/: db_models.py  model_gen.py  models.py  pydantic_models.py
monitoring/: prometheus.yml
nginx/: load_balancer.conf  nginx.conf
public/: index.html
pyarmor_runtime_000000/: __init__.py
report/: jscpd-report.json
scripts/: complete-all.ps1  complete-final.ps1  complete-infrastructure.ps1  completion-summary.md  deploy-all.ps1  deploy-docker.sh  deploy-frontend.ps1  deploy-gtm.ps1  deploy-k8s.sh  deploy-production-infra.ps1  deploy-production.sh  deploy-windows.ps1  deploy.sh  execute-completion.ps1  final-execution.ps1  fix-dependencies.py  hash_passwords.py  init_db.py  process_iot_batch_job.py  run_quality_checks.py  seed_initial_data.py  seed_pilot_data.py  start_frontend.bat  start_frontend.sh  test-all-prs.py  test-all.sh  test-e2e.sh  test-pr5.py  test_deployment.sh  train_rl_model.py  verify-deployment.py
shared/: __init__.py
static/: index.html  manifest.json  service-worker.js
tests/: __init__.py  conftest.py  test+iot.py  test_api_e2e.py  test_arabic_i18n.py  test_carbon.py  test_etrm_endpoints.py  test_forecast.py  test_multi_tenancy.py  test_predict.py  test_quantum.py  test_services.py  test_us_market_data.py
(+282 files in other folders)
